Creating type definition for authors and books